# qml_qt_quick_book

./: .gitignore  README.md  book.toml
book/: 404.html  introduction.html  print.html  searchindex-ba02cd6a.js
book/part1/: ch01_qml_ecosystem.html
book/part2/: ch05_layouts.html  ch06_models_views.html  ch08_animation.html
book/part3/: ch10_python_to_qml.html  ch12_python_backend.html  ch13_packaging.html
book/part4/: ch16_cpp_models.html  ch18_interop_performance.html
book/part5/: ch20_testing.html  ch21_architecture.html
examples/ch04_controls_examples/: buttons.qml  containers.qml  indicators.qml  inputs.qml  menus.qml
examples/part1/ch01_binding_demo/: Main.qml  README.md
examples/part1/ch02_loader_demo/: DetailPane.qml  HeavyComponent.qml  Main.qml  README.md
examples/part1/ch03_input_handlers/: DraggableBox.qml  Main.qml  README.md
examples/part2/ch04_controls_examples/: buttons.qml  containers.qml  inputs.qml  menus.qml
examples/part2/ch04_custom_style/: Main.qml  README.md
examples/part2/ch04_custom_style/MyStyle/: Button.qml  TextField.qml  qmldir
examples/part2/ch05_responsive_layout/: Main.qml  MetricCard.qml  NavItem.qml  README.md  Sidebar.qml  TopBar.qml
examples/part2/ch06_contacts_listview/: ContactDelegate.qml  Main.qml  README.md
examples/part2/ch07_stack_navigation/: DetailScreen.qml  HomeScreen.qml  Main.qml  README.md
examples/part2/ch08_animated_card/: Main.qml  README.md
examples/part3/ch09_hello_pyside6/: README.md  main.py
examples/part3/ch09_hello_pyside6/qml/: qmldir
examples/part3/ch10_counter_app/: README.md  main.py
examples/part3/ch10_counter_app/backend/: __init__.py  counter.py
examples/part3/ch10_counter_app/qml/: qmldir
examples/part3/ch11_contact_model/: README.md  main.py
examples/part3/ch11_contact_model/backend/: __init__.py  contact_model.py
examples/part3/ch11_contact_model/qml/: Main.qml
examples/part3/ch12_mvvm_search/: README.md  main.py
examples/part3/ch12_mvvm_search/qml/: Main.qml
examples/part3/ch12_mvvm_search/services/: __init__.py  search_service.py
examples/part3/ch12_mvvm_search/viewmodels/: __init__.py  search_viewmodel.py
examples/part3/ch13_deployment/: README.md  main.py  pyproject.toml  pysidedeploy.spec
examples/part3/ch13_deployment/qml/DeployApp/: Main.qml  qmldir
examples/part4/ch14_cmake_module/: CMakeLists.txt  README.md  main.cpp
examples/part4/ch14_cmake_module/backend/: CMakeLists.txt  counter.cpp  counter.h
examples/part4/ch14_cmake_module/qml/: CMakeLists.txt  Main.qml
examples/part4/ch15_cpp_types/: CMakeLists.txt  README.md  main.cpp
examples/part4/ch15_cpp_types/backend/: temperature.cpp  temperature.h  unit.h
examples/part4/ch15_cpp_types/qml/: Main.qml
examples/part4/ch16_cpp_models/: CMakeLists.txt  README.md  main.cpp
examples/part4/ch16_cpp_models/backend/: taskfilterproxy.cpp  taskfilterproxy.h  taskmodel.cpp  taskmodel.h
examples/part4/ch16_cpp_models/qml/: Main.qml
examples/part4/ch17_waveform_item/: CMakeLists.txt  README.md  main.cpp  waveformitem.cpp  waveformitem.h
examples/part4/ch17_waveform_item/qml/: Main.qml
examples/part4/ch18_performance/: CMakeLists.txt  README.md  main.cpp  sensormodel.cpp  sensormodel.h
examples/part4/ch18_performance/qml/: Main.qml
examples/part5/ch19_i18n_theming/: README.md  main.py
examples/part5/ch19_i18n_theming/qml/: Main.qml  Theme.qml  qmldir
examples/part5/ch19_i18n_theming/translations/: app_de.ts
examples/part5/ch20_testing/: README.md
examples/part5/ch20_testing/cpp_tests/: CMakeLists.txt  tst_taskmodel.cpp
examples/part5/ch20_testing/python_tests/: conftest.py  task_model.py  test_task_model.py
examples/part5/ch20_testing/qml_tests/: tst_counter.qml
examples/part5/ch21_mvvm_contacts/: README.md  main.py
examples/part5/ch21_mvvm_contacts/qml/: AddContactDialog.qml  ContactListView.qml  Main.qml  qmldir
examples/part5/ch21_mvvm_contacts/services/: contact_service.py
output/epub/: Developing Qt Quick and QML Applications with Python and C++.epub
output/html/: print.html  searcher-c2a407aa.js  toc-e492303a.js  toc.html
output/html/part1/: ch02_qml_language.html  ch03_qtquick_primitives.html
output/html/part2/: ch04_controls.html  ch07_navigation.html
output/html/part3/: ch09_pyside6_architecture.html  ch11_python_models.html
output/html/part4/: ch14_cpp_project.html  ch15_cpp_to_qml.html  ch17_scene_graph.html
output/html/part5/: ch19_i18n_a11y.html
part1/: ch01_qml_ecosystem.md  ch02_qml_language.md
part2/: ch04_controls.md  ch08_animation.md
part3/: ch10_python_to_qml.md  ch13_packaging.md
part4/: ch14_cpp_project.md  ch15_cpp_to_qml.md
part5/: ch21_architecture.md
src/: SUMMARY.md  introduction.md
src/part1/: ch02_qml_language.md  ch03_qtquick_primitives.md
src/part2/: ch04_controls.md  ch05_layouts.md  ch06_models_views.md  ch07_navigation.md
src/part3/: ch09_pyside6_architecture.md  ch11_python_models.md  ch12_python_backend.md
src/part4/: ch16_cpp_models.md  ch17_scene_graph.md  ch18_interop_performance.md
src/part5/: ch19_i18n_a11y.md  ch20_testing.md
(+8 files in other folders)
