cmake_minimum_required(VERSION 3.27)
project(WaveformApp VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick)

qt_standard_project_setup(REQUIRES 6.6)

qt_add_executable(waveformapp
    main.cpp
    waveformitem.h
    waveformitem.cpp
)

qt_add_qml_module(waveformapp
    URI "com.example.scenegraph"
    VERSION 1.0
    QML_FILES
        qml/Main.qml
    SOURCES
        waveformitem.h
        waveformitem.cpp
)

target_link_libraries(waveformapp PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Qml
    Qt6::Quick
)
